--- a/shell.html
+++ b/shell.html
@@ -69,7 +69,6 @@
 <body>
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex="-1"></canvas>
     <div id="ui-container">
-        <!-- <button class="ui" style="margin: 12px;">Test Button</button> -->
     </div>
     <p id="output"></p>
 
@@ -124,6 +123,12 @@
                 return canvas;
             })()
         };
+
+        fetch('ui.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('ui-container').innerHTML = data;
+            });
     </script>
 
     {{{ SCRIPT }}}
