--- a/shell.html
+++ b/shell.html
@@ -39,23 +39,9 @@
             object-fit: contain;
             background: black;
         }
-
-
-        #ui-container {
-            /* background: rgba(0, 150, 255, 0.3); */
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            pointer-events: none;
-            transform: translate(-50%, -50%);
-            display: none;
-        }
-
-        .ui {
-            font-size: 1.1em;
-            pointer-events: auto;
-        }
     </style>
+
+    <link rel="stylesheet" href="ui.css">
 
     <script src="https://cdn.jsdelivr.net/gh/eligrey/FileSaver.js/dist/FileSaver.min.js"></script>
     <script>
