--- a/shell.html
+++ b/shell.html
@@ -8,8 +8,18 @@
     <title>raylib web game</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Relief&display=swap" rel="stylesheet">
 
     <style>
+        html,
+        body,
+        input,
+        button
+        {
+	        font-family: 'Comic Relief', sans-serif;
+        }
+
+
         html,
         body {
             margin: 0;
@@ -119,6 +129,7 @@
             }).
             then(()=>{
                 initUI();
+                setTimeout(resizeUI, 500);
             });
     </script>
 
